Correções de Cores, Layout

--- a/Frontend/GlassHub/GlassHubApp/templates/home.html
+++ b/Frontend/GlassHub/GlassHubApp/templates/home.html
@@ -1,5 +1,4 @@
 {% load static %}
-{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -13,7 +12,7 @@
     <!-- Cabeçalho -->
     <header>
         <div class="menu-icon">
-            <button class="menu-toggle" onclick="toggleMenu()">&#9776; Menu</button>
+            <button class="menu-toggle" onclick="toggleMenu()">&#9776; Opções</button>
         </div>
         <div class="logo">
             <img src="{% static 'images/Logo Temperlandia.png' %}" alt="Temperlândia">
@@ -23,7 +22,7 @@
     <!-- Conteúdo principal -->
     <section class="main-content" id="mainContent">
         <div class="top-banner">
-            <img src="{% static 'images/banner.png' %}" alt="Banner" class="banner-img">
+            <img src="{% static 'banner.png' %}" alt="Banner" class="banner-img">
         </div>
         <div class="grid-container">
             <!-- Add content for each grid item -->
