--- a/Frontend/GlassHub/GlassHubApp/static/style_home.css
+++ b/Frontend/GlassHub/GlassHubApp/static/style_home.css
@@ -1,4 +1,3 @@
-/* Reset básico */
 * {
     margin: 0;
     padding: 0;
@@ -7,7 +6,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #F5F5F5;
+    background-color: #E0E0E0; 
 }
 
 /* Cabeçalho */
@@ -15,7 +14,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #FFA000;
+    background-color: #FFFFFF;
     width: 100%;
     height: 68px;
     padding: 0 20px;
@@ -32,21 +31,21 @@ header {
 .menu-toggle {
     font-size: 20px;
     cursor: pointer;
-    background-color: #FFA000;
-    color: white;
+    background-color: #FEF7FF; 
+    color: #000000;
     padding: 10px 15px;
     border: none;
 }
 
 .menu-toggle:hover {
-    background-color: #FF5722;
+    background-color: #D3D3D3; 
 }
 
 /* Slider Menu */
 .slider-menu {
     position: fixed;
     top: 68px;
-    left: -200px; /* Escondido fora da tela por padrão */
+    left: -200px;
     width: 200px;
     height: 100%;
     background-color: #FFC107;
@@ -54,7 +53,7 @@ header {
 }
 
 .slider-menu.open {
-    left: 0; /* Mostra o menu quando aberto */
+    left: 0;
 }
 
 .slider-menu ul {
@@ -64,12 +63,33 @@ header {
 }
 
 .slider-menu ul li {
-    padding: 15px;
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center;
+    padding: 10px 12px; 
+    background-color: #424242; 
     color: white;
+    border-radius: 5px; 
+    font-size: 14px; 
+    margin-bottom: 10px; 
+    color: #FFFFFF;
 }
 
 .slider-menu ul li:hover {
-    background-color: #FF9800;
+    background-color: #616161; 
+}
+
+.slider-menu ul li::after {
+    content: "\25BC"; 
+    font-size: 12px; 
+    color: white;
+    margin-left: 10px; 
+}
+
+.slider-menu ul li a {
+    color: #FFFFFF; 
+    text-decoration: none; 
+    width: 100%; 
 }
 
 /* Conteúdo principal */
