Separação do Primeiro botão do Cabeçalho

--- a/Frontend/GlassHub/GlassHubApp/static/style_home.css
+++ b/Frontend/GlassHub/GlassHubApp/static/style_home.css
@@ -62,6 +62,10 @@ header {
     margin: 0;
 }
 
+.slider-menu ul li:first-child {
+    margin-top: 10px;
+}
+
 .slider-menu ul li {
     display: flex; 
     justify-content: space-between; 
