--- a/Frontend/GlassHub/GlassHubApp/static/style_home.css
+++ b/Frontend/GlassHub/GlassHubApp/static/style_home.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #E0E0E0; 
+    background-color: #D9D9D9; 
 }
 
 /* Cabeçalho */
@@ -48,7 +48,7 @@ header {
     left: -200px;
     width: 200px;
     height: 100%;
-    background-color: #FFC107;
+    background-color: #FFB41C;
     transition: left 0.3s ease;
 }
 
@@ -108,7 +108,7 @@ header {
     align-items: center;
     width: 100%;
     height: 200px;
-    background-color: #FFA000;
+    background-color: #E9E9E9E9;
 }
 
 .banner-img {
@@ -125,7 +125,7 @@ header {
 }
 
 .grid-item {
-    background-color: #E0E0E0;
+    background-color: #E9E9E9E9;
     border: 1px solid #BDBDBD;
     border-radius: 8px;
     padding: 20px;
