--- a/Frontend/GlassHub/GlassHubApp/static/style_home.css
+++ b/Frontend/GlassHub/GlassHubApp/static/style_home.css
@@ -50,6 +50,8 @@ header {
     height: 100%;
     background-color: #FFB41C;
     transition: left 0.3s ease;
+    align-items: center; 
+    justify-content: center;
 }
 
 .slider-menu.open {
@@ -77,6 +79,9 @@ header {
     font-size: 14px; 
     margin-bottom: 10px; 
     color: #FFFFFF;
+    justify-content: center; /* Centraliza o conteúdo dos itens da lista */
+    align-items: center;
+    text-align: center; 
 }
 
 .slider-menu ul li:hover {
