--- a/Frontend/GlassHub/GlassHubApp/static/style_home.css
+++ b/Frontend/GlassHub/GlassHubApp/static/style_home.css
@@ -41,6 +41,17 @@ header {
     background-color: #D3D3D3; 
 }
 
+.date-time {
+    position: absolute;
+    left: calc(85% - 945px); 
+    transform: translateX(-50%);
+    font-size: 120%; 
+    color: #000000; 
+    white-space: nowrap; 
+    opacity: 0.8;
+    font-weight: bold; 
+}
+
 /* Slider Menu */
 .slider-menu {
     position: fixed;
@@ -79,7 +90,7 @@ header {
     font-size: 14px; 
     margin-bottom: 10px; 
     color: #FFFFFF;
-    justify-content: center; /* Centraliza o conteúdo dos itens da lista */
+    justify-content: center; 
     align-items: center;
     text-align: center; 
 }
