--- a/Frontend/GlassHub/GlassHubApp/templates/home.html
+++ b/Frontend/GlassHub/GlassHubApp/templates/home.html
@@ -14,6 +14,7 @@
         <div class="menu-icon">
             <button class="menu-toggle" onclick="toggleMenu()">&#9776; Opções</button>
         </div>
+        <div id="dateTime" class="date-time"></div> 
         <div class="logo">
             <img src="{% static 'images/Logo Temperlandia.png' %}" alt="Temperlândia">
         </div>
@@ -46,21 +47,33 @@
     </nav>
 
     <script>
-        // Função para abrir/fechar o menu
         function toggleMenu() {
             const sliderMenu = document.getElementById("sliderMenu");
             const mainContent = document.getElementById("mainContent");
 
-            // Alterna a classe 'open' para o menu
             sliderMenu.classList.toggle("open");
 
-            // Ajusta a margem do conteúdo principal quando o menu está aberto
             if (sliderMenu.classList.contains("open")) {
                 mainContent.style.marginLeft = "200px";
             } else {
                 mainContent.style.marginLeft = "0";
             }
         }
+
+        function updateDateTime() {
+            const now = new Date();
+            const day = String(now.getDate()).padStart(2, '0');
+            const month = String(now.getMonth() + 1).padStart(2, '0');
+            const year = now.getFullYear();
+            const hours = String(now.getHours()).padStart(2, '0');
+            const minutes = String(now.getMinutes()).padStart(2, '0');
+            
+            const dateTimeString = `Data: ${day}/${month}/${year} Hora: ${hours}:${minutes}`;
+            document.getElementById("dateTime").innerText = dateTimeString;
+        }
+
+        setInterval(updateDateTime, 60000); 
+        updateDateTime();
     </script>
 
 </body>
