--- a/Frontend/GlassHub/GlassHubApp/templates/dashbord.html
+++ b/Frontend/GlassHub/GlassHubApp/templates/dashbord.html
@@ -39,7 +39,7 @@
     <!-- Menu lateral -->
     <nav class="slider-menu" id="sliderMenu">
         <ul>
-            <li><a href="#">Item 01</a></li>
+            <li><a href="{% url 'home' %}">Início</a></li>
             <li><a href="#">Item 02</a></li>
             <li><a href="#">Item 03</a></li>
             <li><a href="#">Item 04</a></li>
