--- a/Frontend/GlassHub/GlassHubApp/templates/home.html
+++ b/Frontend/GlassHub/GlassHubApp/templates/home.html
@@ -69,15 +69,15 @@
         </div>
     </section>
 
-    <!-- Menu lateral -->
-    <nav class="slider-menu" id="sliderMenu">
-        <ul>
-            <li><a href="#">Item 01</a></li>
-            <li><a href="#">Item 02</a></li>
-            <li><a href="#">Item 03</a></li>
-            <li><a href="#">Item 04</a></li>
-        </ul>
-    </nav>
+<!-- Menu lateral -->
+<nav class="slider-menu" id="sliderMenu">
+    <ul>
+        <li><a href="{% url 'dashbord' %}">Dashbord</a></li>
+        <li><a href="#">Item 02</a></li>
+        <li><a href="#">Item 03</a></li>
+        <li><a href="#">Item 04</a></li>
+    </ul>
+</nav>
 
     <script>
         function toggleMenu() {
