Melhorias do Título

--- a/Frontend/GlassHub/GlassHubApp/templates/home.html
+++ b/Frontend/GlassHub/GlassHubApp/templates/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temperlândia</title>
+    <title>Temperlândia | Monitoramento</title>
     <link rel="stylesheet" href="{% static 'style_home.css' %}">
 </head>
 <body>
