--- a/Frontend/GlassHub/GlassHubApp/templates/dashbord.html
+++ b/Frontend/GlassHub/GlassHubApp/templates/dashbord.html
@@ -16,7 +16,7 @@
         </div>
         <div id="dateTime" class="date-time"></div> 
         <div class="logo">
-            <img src="{% static 'Logo Temperlandia.png' %}" alt="Temperlândia">
+            <img src="{% static 'images/Logo Temperlandia.png' %}" alt="Temperlândia">
         </div>
     </header>
 
@@ -67,14 +67,14 @@
             const year = now.getFullYear();
             const hours = String(now.getHours()).padStart(2, '0');
             const minutes = String(now.getMinutes()).padStart(2, '0');
+            const seconds = String(now.getSeconds()).padStart(2, '0');
             
-            const dateTimeString = `Data: ${day}/${month}/${year} Hora: ${hours}:${minutes}`;
+            const dateTimeString = `Data: ${day}/${month}/${year} Hora: ${hours}:${minutes}:${seconds}`;
             document.getElementById("dateTime").innerText = dateTimeString;
         }
 
-        setInterval(updateDateTime, 60000); 
-        updateDateTime();
+        setInterval(updateDateTime, 1000); // Atualize a cada segundo
+        updateDateTime(); // Inicialize o relógio imediatamente
     </script>
-
 </body>
 </html>
