--- a/Frontend/GlassHub/GlassHubApp/templates/home.html
+++ b/Frontend/GlassHub/GlassHubApp/templates/home.html
@@ -16,7 +16,7 @@
         </div>
         <div id="dateTime" class="date-time"></div> 
         <div class="logo">
-            <img src="{% static 'Logo Temperlandia.png' %}" alt="Temperlândia">
+            <img src="{% static 'images/Logo Temperlandia.png' %}" alt="Temperlândia">
         </div>
     </header>
 
@@ -79,35 +79,36 @@
     </ul>
 </nav>
 
-    <script>
-        function toggleMenu() {
-            const sliderMenu = document.getElementById("sliderMenu");
-            const mainContent = document.getElementById("mainContent");
+<script>
+    function toggleMenu() {
+        const sliderMenu = document.getElementById("sliderMenu");
+        const mainContent = document.getElementById("mainContent");
 
-            sliderMenu.classList.toggle("open");
+        sliderMenu.classList.toggle("open");
 
-            if (sliderMenu.classList.contains("open")) {
-                mainContent.style.marginLeft = "200px";
-            } else {
-                mainContent.style.marginLeft = "0";
-            }
+        if (sliderMenu.classList.contains("open")) {
+            mainContent.style.marginLeft = "200px";
+        } else {
+            mainContent.style.marginLeft = "0";
         }
+    }
 
-        function updateDateTime() {
-            const now = new Date();
-            const day = String(now.getDate()).padStart(2, '0');
-            const month = String(now.getMonth() + 1).padStart(2, '0');
-            const year = now.getFullYear();
-            const hours = String(now.getHours()).padStart(2, '0');
-            const minutes = String(now.getMinutes()).padStart(2, '0');
-            
-            const dateTimeString = `Data: ${day}/${month}/${year} Hora: ${hours}:${minutes}`;
-            document.getElementById("dateTime").innerText = dateTimeString;
-        }
+    function updateDateTime() {
+        const now = new Date();
+        const day = String(now.getDate()).padStart(2, '0');
+        const month = String(now.getMonth() + 1).padStart(2, '0');
+        const year = now.getFullYear();
+        const hours = String(now.getHours()).padStart(2, '0');
+        const minutes = String(now.getMinutes()).padStart(2, '0');
+        const seconds = String(now.getSeconds()).padStart(2, '0');
+        
+        const dateTimeString = `Data: ${day}/${month}/${year} Hora: ${hours}:${minutes}:${seconds}`;
+        document.getElementById("dateTime").innerText = dateTimeString;
+    }
 
-        setInterval(updateDateTime, 60000); 
-        updateDateTime();
-    </script>
+    setInterval(updateDateTime, 1000); // Atualize a cada segundo
+    updateDateTime(); // Inicialize o relógio imediatamente
+</script>
 
 </body>
 </html>
