--- a/Frontend/GlassHub/GlassHubApp/static/style_home.css
+++ b/Frontend/GlassHub/GlassHubApp/static/style_home.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -5,7 +7,7 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: Arial, sans-serif, 'Inter';
     background-color: #D9D9D9; 
 }
 
@@ -146,12 +148,20 @@ h2 {
     border-radius: 5px;
     align-items: center;
     border: 1px solid #ddd;
+    font-size: 16px;
+    color: #000000CC;
+    font-weight: bold; 
+    position: relative;
 }
 
 .process-row span {
-    font-size: 16px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 700; /* Peso 700 */
+    font-size: 24px; /* Tamanho 24px */
+    line-height: 36px; /* Altura da linha 36px */
+    letter-spacing: -1.9%; /* Espaçamento entre letras -1.9% */
+    color: #000000CC; /* Cor com transparência */
 }
-
 .status {
     width: 25px;
     height: 25px;
