--- a/Frontend/GlassHub/GlassHubApp/templates/monitoramento.html
+++ b/Frontend/GlassHub/GlassHubApp/templates/monitoramento.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temperlândia | Monitoramento</title>
-    <link rel="stylesheet" href="{% static 'style_home.css' %}">
+    <link rel="stylesheet" href="{% static 'style_monitoramento.css' %}">
 </head>
 <body>
 
