--- a/Frontend/GlassHub/GlassHubApp/templates/dashbord.html
+++ b/Frontend/GlassHub/GlassHubApp/templates/dashbord.html
@@ -39,8 +39,8 @@
     <!-- Menu lateral -->
     <nav class="slider-menu" id="sliderMenu">
         <ul>
-            <li><a href="{% url 'home' %}">Monitoramento</a></li>
-            <li><a href="#">Item 02</a></li>
+            <li><a href="{% url 'dashbord' %}">Dashbord</a></li>
+            <li><a href="{% url 'monitoramento' %}">Monitoramento</a></li>
             <li><a href="#">Item 03</a></li>
             <li><a href="#">Item 04</a></li>
         </ul>
