--- a/Frontend/GlassHub/GlassHubApp/templates/monitoramento.html
+++ b/Frontend/GlassHub/GlassHubApp/templates/monitoramento.html
@@ -73,7 +73,7 @@
 <nav class="slider-menu" id="sliderMenu">
     <ul>
         <li><a href="{% url 'dashbord' %}">Dashbord</a></li>
-        <li><a href="#">Item 02</a></li>
+        <li><a href="{% url 'monitoramento' %}">Monitoramento</a></li>
         <li><a href="#">Item 03</a></li>
         <li><a href="#">Item 04</a></li>
     </ul>
@@ -106,8 +106,8 @@
         document.getElementById("dateTime").innerText = dateTimeString;
     }
 
-    setInterval(updateDateTime, 1000); // Atualize a cada segundo
-    updateDateTime(); // Inicialize o relógio imediatamente
+    setInterval(updateDateTime, 1000); 
+    updateDateTime();
 </script>
 
 </body>
