--- a/Frontend/GlassHub/GlassHubApp/static/style_monitoramento.css
+++ b/Frontend/GlassHub/GlassHubApp/static/style_monitoramento.css
@@ -156,11 +156,11 @@ h2 {
 
 .process-row span {
     font-family: 'Inter', sans-serif;
-    font-weight: 700; /* Peso 700 */
-    font-size: 24px; /* Tamanho 24px */
-    line-height: 36px; /* Altura da linha 36px */
-    letter-spacing: -1.9%; /* Espaçamento entre letras -1.9% */
-    color: #000000CC; /* Cor com transparência */
+    font-weight: 700; 
+    font-size: 24px; 
+    line-height: 36px; 
+    letter-spacing: -1.9%; 
+    color: #000000CC; 
 }
 .status {
     width: 25px;
