--- a/Frontend/GlassHub/GlassHubApp/static/style_login.css
+++ b/Frontend/GlassHub/GlassHubApp/static/style_login.css
@@ -55,6 +55,7 @@ body {
 
 .input-group i {
     position: absolute;
+    margin-bottom: 30px; 
     top: 50%;
     left: 10px;
     transform: translateY(-50%);
@@ -63,7 +64,7 @@ body {
 
 .input-group input {
     width: 100%;
-    padding: 10px 10px 10px 40px; 
+    padding: 15px 10px 15px 40px;
     border: 1px solid #ccc;
     border-radius: 8px;
     font-size: 16px;
