--- a/Frontend/GlassHub/GlassHubApp/templates/dashbord.html
+++ b/Frontend/GlassHub/GlassHubApp/templates/dashbord.html
@@ -73,8 +73,8 @@
             document.getElementById("dateTime").innerText = dateTimeString;
         }
 
-        setInterval(updateDateTime, 1000); // Atualize a cada segundo
-        updateDateTime(); // Inicialize o relógio imediatamente
+        setInterval(updateDateTime, 1000);
+        updateDateTime(); 
     </script>
 </body>
 </html>
