Correções do Layout

--- a/Frontend/GlassHub/GlassHubApp/templates/login.html
+++ b/Frontend/GlassHub/GlassHubApp/templates/login.html
@@ -14,7 +14,7 @@
             <h2>Bem-Vindo de Volta</h2>
         </div>
         <div class="form-section">
-            <h2>Cadastre seus dados</h2>
+            <h2>Faça seu Login</h2>
             <form method="POST" autocomplete="off"> 
                 {% csrf_token %}
                 <div class="input-group">
