--- a/Frontend/GlassHub/GlassHubApp/static/style_login.css
+++ b/Frontend/GlassHub/GlassHubApp/static/style_login.css
@@ -26,11 +26,10 @@ body {
     padding: 20px;
     width: 40%;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+    flex-direction: column; /* Organiza o conteúdo verticalmente */
+    justify-content: flex-start; /* Alinha o conteúdo ao topo */
     background-color: transparent; 
-    position: relative;
+    position: relative; /* Mantém a posição relativa */
 }
 
 .welcome-section::before {
@@ -48,29 +47,36 @@ body {
 .welcome-section h2 {
     color: white;
     font-size: 24px;
-    z-index: 1;
+    position: relative; /* Adiciona posicionamento relativo */
+    top: 50px; /* Move o texto 5 cm (50px) para baixo */
+    left: 40px; /* Move o texto 1 cm (10px) para a direita */
+    z-index: 1; /* Garante que o texto fique acima do fundo */
 }
 
 .form-section {
     background-color: #f0f0f0;
     padding: 30px;
     width: 60%;
+    display: flex;
+    flex-direction: column; 
+    justify-content: flex-start;
 }
 
 .form-section h2 {
     text-align: center;
     margin-bottom: 20px;
     font-weight: normal;
+    margin-top: 30px; /* Ajuste conforme necessário */
 }
 
 .input-group {
     position: relative; 
     margin-bottom: 15px;
+    margin-top: 30px; /* Ajuste conforme necessário */
 }
 
 .input-group i {
     position: absolute;
-    margin-bottom: 30px; 
     top: 50%;
     left: 10px;
     transform: translateY(-50%);
@@ -90,14 +96,18 @@ body {
 }
 
 button {
-    width: 100%;
-    padding: 12px;
+    width: 100%; /* Faz com que o botão use toda a largura disponível */
+    padding: 12px; /* Aumenta o padding para tornar o botão maior */
     background-color: #FFB300;
     color: white;
     border: none;
-    border-radius: 8px;
-    font-size: 18px;
+    border-radius: 25px; /* Aumenta o arredondamento para um estilo mais circular */
+    font-size: 16px; /* Ajusta o tamanho da fonte para um botão maior */
     cursor: pointer;
+    margin-top: 30px; /* Ajuste conforme necessário */
+    display: block; /* Garante que o botão seja exibido como bloco */
+    margin-left: auto; /* Centraliza horizontalmente */
+    margin-right: auto; /* Centraliza horizontalmente */
 }
 
 button:hover {
