--- a/Frontend/GlassHub/GlassHubApp/static/style_login.css
+++ b/Frontend/GlassHub/GlassHubApp/static/style_login.css
@@ -1,8 +1,9 @@
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 body {
@@ -97,7 +98,7 @@ body {
 
 button {
     width: 100%;
-    padding: 12px; 
+    padding: 12px 0; 
     background-color: #FFB300;
     color: white;
     border: none;
@@ -107,6 +108,8 @@ button {
     margin-top: 30px; 
     display: block; 
     margin-left: auto; 
+    font-family: 'Poppins', sans-serif; 
+    box-sizing: border-box;
 }
 
 button:hover {
