Correções dos Processos

--- a/Frontend/GlassHub/GlassHubApp/templates/monitoramento.html
+++ b/Frontend/GlassHub/GlassHubApp/templates/monitoramento.html
@@ -29,9 +29,13 @@
                 <span class="status success"></span>
                 <span class="status success"></span>
                 <span class="status success"></span>
+                <span class="status success"></span>
+                <span class="status success"></span>
             </div>
             <div class="process-row">
                 <span>Processo 2</span>
+                <span class="status success"></span>
+                <span class="status success"></span>
                 <span class="status success"></span>
                 <span class="status success"></span>
                 <span class="status success"></span>
@@ -41,9 +45,13 @@
                 <span class="status success"></span>
                 <span class="status success"></span>
                 <span class="status success"></span>
+                <span class="status success"></span>
+                <span class="status success"></span>
             </div>
             <div class="process-row">
                 <span>Processo 4</span>
+                <span class="status success"></span>
+                <span class="status success"></span>
                 <span class="status success"></span>
                 <span class="status success"></span>
                 <span class="status success"></span>
@@ -53,9 +61,13 @@
                 <span class="status success"></span>
                 <span class="status success"></span>
                 <span class="status success"></span>
+                <span class="status success"></span>
+                <span class="status success"></span>
             </div>
             <div class="process-row">
                 <span>Processo 6</span>
+                <span class="status success"></span>
+                <span class="status success"></span>
                 <span class="status success"></span>
                 <span class="status success"></span>
                 <span class="status success"></span>
@@ -65,6 +77,8 @@
                 <span class="status success"></span>
                 <span class="status success"></span>
                 <span class="status fail"></span>
+                <span class="status success"></span>
+                <span class="status success"></span>
             </div>
         </div>
     </section>
