--- a/Frontend/GlassHub/GlassHubApp/static/style_monitoramento.css
+++ b/Frontend/GlassHub/GlassHubApp/static/style_monitoramento.css
@@ -65,6 +65,7 @@ header {
     transition: left 0.3s ease;
     align-items: center; 
     justify-content: center;
+    overflow: hidden; 
 }
 
 .slider-menu.open {
