--- a/Frontend/GlassHub/GlassHubApp/templates/dashbord.html
+++ b/Frontend/GlassHub/GlassHubApp/templates/dashbord.html
@@ -40,8 +40,8 @@
     <nav class="slider-menu" id="sliderMenu">
         <ul>
             <li><a href="{% url 'dashbord' %}">Dashbord</a></li>
+            <li><a href="{% url 'faturamento' %}">Faturamento</a></li>
             <li><a href="{% url 'monitoramento' %}">Monitoramento</a></li>
-            <li><a href="#">Item 03</a></li>
             <li><a href="#">Item 04</a></li>
         </ul>
     </nav>
