--- a/Frontend/GlassHub/GlassHubApp/templates/cadastro.html
+++ b/Frontend/GlassHub/GlassHubApp/templates/cadastro.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temperlândia | Dashbord</title>
-    <link rel="stylesheet" href="{% static 'style_dashbord.css' %}">
+    <title>Temperlândia | Cadastro</title>
+    <link rel="stylesheet" href="{% static 'style_cadastro.css' %}">
 </head>
 <body>
 
@@ -19,22 +19,6 @@
             <img src="{% static 'images/Logo Temperlandia.png' %}" alt="Temperlândia">
         </div>
     </header>
-
-    <!-- Conteúdo principal -->
-    <section class="main-content" id="mainContent">
-        <div class="top-banner">
-            <img src="{% static 'banner.png' %}" alt="Banner" class="banner-img">
-        </div>
-        <div class="grid-container">
-            <!-- Add content for each grid item -->
-            <div class="grid-item">Gráfico 1</div>
-            <div class="grid-item">Gráfico 2</div>
-            <div class="grid-item">Gráfico 3</div>
-            <div class="grid-item">Gráfico 4</div>
-            <div class="grid-item">Gráfico 5</div>
-            <div class="grid-item">Gráfico 6</div>
-        </div>
-    </section>
 
     <!-- Menu lateral -->
     <nav class="slider-menu" id="sliderMenu">
