--- a/Frontend/GlassHub/GlassHubApp/templates/monitoramento.html
+++ b/Frontend/GlassHub/GlassHubApp/templates/monitoramento.html
@@ -86,10 +86,12 @@
 <!-- Menu lateral -->
 <nav class="slider-menu" id="sliderMenu">
     <ul>
+        <li><a href="{% url 'alarmes' %}">Alarmes</a></li>
         <li><a href="{% url 'dashbord' %}">Dashbord</a></li>
         <li><a href="{% url 'faturamento' %}">Faturamento</a></li>
         <li><a href="{% url 'monitoramento' %}">Monitoramento</a></li>
-        <li><a href="#">Item 04</a></li>
+        <li><a href="{% url 'parametrizacao' %}">Parametrização</a></li>
+        <li><a href="{% url 'login' %}">Sair</a></li>
     </ul>
 </nav>
 
