--- a/Frontend/GlassHub/GlassHubApp/templates/parametrizacao.html
+++ b/Frontend/GlassHub/GlassHubApp/templates/parametrizacao.html
@@ -9,7 +9,6 @@
 </head>
 <body>
 
-    <!-- Cabeçalho -->
     <header>
         <div class="menu-icon">
             <button class="menu-toggle" onclick="toggleMenu()">&#9776; Opções</button>
@@ -20,8 +19,8 @@
         </div>
     </header>
 
-    <!-- Menu lateral -->
-    <nav class="slider-menu" id="sliderMenu">
+    <!-- Adicionando o slider menu -->
+    <nav id="sliderMenu" class="slider-menu">
         <ul>
             <li><a href="{% url 'alarmes' %}">Alarmes</a></li>
             <li><a href="{% url 'dashbord' %}">Dashbord</a></li>
@@ -31,6 +30,61 @@
             <li><a href="{% url 'login' %}">Sair</a></li>
         </ul>
     </nav>
+
+    <main id="mainContent">
+        <section class="parametrizacao-container">
+            <h2>Parametrização de Processos</h2>
+
+            <!-- Tabela para os processos e tempos -->
+            <table class="parametrizacao-table">
+                <thead>
+                    <tr>
+                        <th>Processo</th>
+                        <th>Tempo Inicial</th>
+                        <th>Tempo Final</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><input type="text" value="Processo 1" readonly></td>
+                        <td><input type="number" value="30"></td>
+                        <td><input type="number" value="60"></td>
+                    </tr>
+                    <tr>
+                        <td><input type="text" value="Processo 2" readonly></td>
+                        <td><input type="number" value="20"></td>
+                        <td><input type="number" value="50"></td>
+                    </tr>
+                    <tr>
+                        <td><input type="text" value="Processo 3" readonly></td>
+                        <td><input type="number" value="20"></td>
+                        <td><input type="number" value="50"></td>
+                    </tr>
+                    <tr>
+                        <td><input type="text" value="Processo 4" readonly></td>
+                        <td><input type="number" value="20"></td>
+                        <td><input type="number" value="50"></td>
+                    </tr>
+                    <tr>
+                        <td><input type="text" value="Processo 5" readonly></td>
+                        <td><input type="number" value="20"></td>
+                        <td><input type="number" value="50"></td>
+                    </tr>
+                    <tr>
+                        <td><input type="text" value="Processo 6" readonly></td>
+                        <td><input type="number" value="20"></td>
+                        <td><input type="number" value="50"></td>
+                    </tr>
+                    <tr>
+                        <td><input type="text" value="Processo 7" readonly></td>
+                        <td><input type="number" value="20"></td>
+                        <td><input type="number" value="50"></td>
+                    </tr>
+                    <!-- Continue com as demais linhas -->
+                </tbody>
+            </table>
+        </section>
+    </main>
 
     <script>
         function toggleMenu() {
@@ -62,5 +116,7 @@
         setInterval(updateDateTime, 1000);
         updateDateTime(); 
     </script>
+
 </body>
+
 </html>
