--- a/Frontend/GlassHub/GlassHubApp/static/style_parametrizacao.css
+++ b/Frontend/GlassHub/GlassHubApp/static/style_parametrizacao.css
@@ -9,6 +9,49 @@ body {
     background-color: #D9D9D9;
 }
 
+/* Cabeçalho */
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #FFFFFF;
+    width: 100%;
+    height: 68px;
+    padding: 0 20px;
+}
+
+.logo {
+    flex: 0 1 auto;
+}
+
+.menu-icon {
+    flex: 1;
+}
+
+.menu-toggle {
+    font-size: 20px;
+    cursor: pointer;
+    background-color: #FEF7FF; 
+    color: #000000;
+    padding: 10px 15px;
+    border: none;
+}
+
+.menu-toggle:hover {
+    background-color: #D3D3D3; 
+}
+
+.date-time {
+    position: absolute;
+    left: calc(85% - 945px); 
+    transform: translateX(-50%);
+    font-size: 120%; 
+    color: #000000; 
+    white-space: nowrap; 
+    opacity: 0.8;
+    font-weight: bold; 
+}
+
 .slider-menu {
     position: fixed;
     top: 68px;
@@ -67,20 +110,6 @@ body {
     color: #FFFFFF; 
     text-decoration: none; 
     width: 100%; 
-}
-
-/* Header */
-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #FFFFFF;
-    padding: 10px 20px;
-}
-
-.date-time {
-    font-size: 16px;
-    color: #000;
 }
 
 /* Parametrization Section */
