--- a/Frontend/GlassHub/GlassHubApp/static/style_parametrizacao.css
+++ b/Frontend/GlassHub/GlassHubApp/static/style_parametrizacao.css
@@ -9,6 +9,49 @@ body {
     background-color: #D9D9D9;
 }
 
+/* Cabeçalho */
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #FFFFFF;
+    width: 100%;
+    height: 68px;
+    padding: 0 20px;
+}
+
+.logo {
+    flex: 0 1 auto;
+}
+
+.menu-icon {
+    flex: 1;
+}
+
+.menu-toggle {
+    font-size: 20px;
+    cursor: pointer;
+    background-color: #FEF7FF; 
+    color: #000000;
+    padding: 10px 15px;
+    border: none;
+}
+
+.menu-toggle:hover {
+    background-color: #D3D3D3; 
+}
+
+.date-time {
+    position: absolute;
+    left: calc(85% - 945px); 
+    transform: translateX(-50%);
+    font-size: 120%; 
+    color: #000000; 
+    white-space: nowrap; 
+    opacity: 0.8;
+    font-weight: bold; 
+}
+
 .slider-menu {
     position: fixed;
     top: 68px;
@@ -81,6 +124,21 @@ header {
 .date-time {
     font-size: 16px;
     color: #000;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    padding: 20px;
+}
+
+.grid-item {
+    background-color: #E9E9E9E9;
+    border: 1px solid #BDBDBD;
+    border-radius: 8px;
+    padding: 20px;
+    height: 200px;
 }
 
 /* Parametrization Section */
